Using ZmlBarLayer instead of quality layer everwhere

--- a/KalypsoUIRRM/plugin.properties
+++ b/KalypsoUIRRM/plugin.properties
@@ -5,12 +5,12 @@ Category.name=Rainfall-Runoff Model
 KalypsoUIRRM.updateKMParameter.label=Calculate KM parameters
 KalypsoUIRRM.updateKMParameter.tooltip=Starts the wizard to calculate Kalinin-Miljukov parameters for selected strands
 NewWizard.name=KalypsoHydrology Model
-command.label=Display St\u00FCtzstellen [TODO]
+command.label=Display real values
 command.label.0=Display missing values
 command.label.1=Debug
 command.label.10=Above
 command.label.11=Below
-command.label.2=Display St\u00FCtzstellen [TODO]
+command.label.2=Display real values
 command.label.3=Display missing values
 command.label.4=All
 command.label.5=Selection
@@ -87,3 +87,5 @@ view.name.2=Timeseries Diagram
 view.name.3=Result View
 wizard.name.0=KalypsoHydrology Model (from ASCII-Files)
 workflowSystem.name=KalypsoHydrology Workflow
+org.kalypso.zml.ui.chart.layer.commands.change.visibility.label=Missing Values
+org.kalypso.zml.ui.chart.layer.commands.change.visibility.tooltip=Show/hide missing values
