--- a/trunk/KalypsoModelProduct/build.properties
+++ b/trunk/KalypsoModelProduct/build.properties
@@ -10,7 +10,8 @@ bin.includes = plugin.xml,\
                about.mappings,\
                about.properties,\
                plugin_customization.ini,\
-               icons/
+               icons/,\
+               p2.inf
 jars.compile.order = .
 src.includes = etc/,\
                kalypsomodel.product,\
@@ -19,5 +20,7 @@ src.includes = etc/,\
                about.ini,\
                about.properties,\
                about.mappings,\
-               icons/
+               icons/,\
+               plugin_de.properties,\
+               p2.inf
 source.. = src/
