--- a/KalypsoModelFlood/plugin.xml
+++ b/KalypsoModelFlood/plugin.xml
@@ -29,40 +29,49 @@
             name="%org.kalypso.model.flood.workflow">
       </workflowSystem>
    </extension>
-   <extension
-         point="org.eclipse.ui.handlers">
+   
+   <!-- Workflow -->
+   <extension point="org.eclipse.ui.commands">
+      <category id="org.kalypso.model.flood.workflow" name="Flood Workflow commands"/>
+      <command id="org.kalypso.model.flood.DataLoad" categoryId="org.kalypso.model.flood.workflow" name="%org.kalypso.model.flood.DataLoad.name" description="%org.kalypso.model.flood.DataLoad.description" />
+      <command id="org.kalypso.model.flood.ManageWaterlevelData" categoryId="org.kalypso.model.flood.workflow" name="%org.kalypso.model.flood.ManageWaterlevelData.name" description="%org.kalypso.model.flood.ManageWaterlevelData.description" />
+      <command id="org.kalypso.model.flood.ManageDTMData" categoryId="org.kalypso.model.flood.workflow" name="%org.kalypso.model.flood.ManageDTMData.name" description="%org.kalypso.model.flood.ManageDTMData.description" />
+      <command id="org.kalypso.model.flood.PolygonEditing" categoryId="org.kalypso.model.flood.workflow" name="%org.kalypso.model.flood.PolygonEditing.name" description="%org.kalypso.model.flood.PolygonEditing.description" />
+      <command id="org.kalypso.model.flood.ProcessFloodModel" categoryId="org.kalypso.model.flood.workflow"  name="%org.kalypso.model.flood.ProcessFloodModel.name" description="%org.kalypso.model.flood.ProcessFloodModel.description"/>
+      <command id="org.kalypso.model.flood.Postprocessing" categoryId="org.kalypso.model.flood.workflow" name="%org.kalypso.model.flood.Postprocessing.name" description="%org.kalypso.model.flood.Postprocessing.description"/>
+      <command id="org.kalypso.model.flood.VisualizeDepthData" categoryId="org.kalypso.model.flood.workflow" name="%org.kalypso.model.flood.VisualizeDepthData.name" description="%org.kalypso.model.flood.VisualizeDepthData.description"/>
+      <command id="org.kalypso.model.flood.GenerateRiskModel" categoryId="org.kalypso.model.flood.workflow" name="%org.kalypso.model.flood.GenerateRiskModel.name" description="%org.kalypso.model.flood.GenerateRiskModel.description"/>
+   </extension>
+   
+   <extension point="org.eclipse.ui.commandImages">
+   
+      <image commandId="org.kalypso.model.flood.DataLoad" icon="icons/workflow/DataLoad.gif"/>
+      <image commandId="org.kalypso.model.flood.ManageWaterlevelData" icon="icons/workflow/ManageWaterlevelData.gif"/>
+      <image commandId="org.kalypso.model.flood.ManageDTMData" icon="icons/workflow/ManageDTMData.gif"/>
+      <image commandId="org.kalypso.model.flood.PolygonEditing" icon="icons/workflow/PolygonEditing.gif"/>
+      <image commandId="org.kalypso.model.flood.ProcessFloodModel" icon="icons/workflow/ProcessFloodModel.gif"/>
+      
+      <!--
+      <image commandId="org.kalypso.model.flood.Postprocessing" icon=""/>
+      -->
+      
+      <image commandId="org.kalypso.model.flood.VisualizeDepthData" icon="icons/workflow/VisualizeDepthData.gif"/>
+      <image commandId="org.kalypso.model.flood.GenerateRiskModel" icon="icons/workflow/GenerateRiskModel.gif"/>
+   </extension>
+   
+   <extension point="org.eclipse.ui.handlers">
 
       <!-- Handler for workflow.xml: non-existing commandId is ok here --> 
-      <handler
-            commandId="org.kalypso.model.flood.ManageWaterlevelData">
-         <class
-               class="org.kalypso.ogc.gml.map.widgets.SelectWidgetHandler">
-            <parameter
-                  name="org.kalypso.ogc.gml.map.widgets.SelectWidgetCommand.widget"
-                  value="org.kalypso.model.flood.ui.map.EventManagementWidget">
-            </parameter>
+      <handler commandId="org.kalypso.model.flood.ManageWaterlevelData">
+         <class class="org.kalypso.ogc.gml.map.widgets.SelectWidgetHandler">
+            <parameter name="org.kalypso.ogc.gml.map.widgets.SelectWidgetCommand.widget" value="org.kalypso.model.flood.ui.map.EventManagementWidget"/>
          </class>
       </handler>
-      <handler
-            class="org.kalypso.model.flood.handlers.VisualizeGridDataHandler"
-            commandId="org.kalypso.model.flood.ManageDTMData">
-      </handler>
-      <handler
-            class="org.kalypso.model.flood.handlers.PolygonEditingHandler"
-            commandId="org.kalypso.model.flood.PolygonEditing">
-      </handler>
-      <handler
-            class="org.kalypso.model.flood.handlers.ProcessFloodModelHandler"
-            commandId="org.kalypso.model.flood.ProcessFloodModel">
-      </handler>
-      <handler
-            class="org.kalypso.model.flood.handlers.VisualizeDepthDataHandler"
-            commandId="org.kalypso.model.flood.VisualizeDepthData">
-      </handler>
-      <handler
-            class="org.kalypso.model.flood.handlers.GenerateRiskModelHandler"
-            commandId="org.kalypso.model.flood.GenerateRiskModel">
-      </handler>
+      <handler class="org.kalypso.model.flood.handlers.VisualizeGridDataHandler" commandId="org.kalypso.model.flood.ManageDTMData"/>
+      <handler class="org.kalypso.model.flood.handlers.PolygonEditingHandler" commandId="org.kalypso.model.flood.PolygonEditing"/>
+      <handler class="org.kalypso.model.flood.handlers.ProcessFloodModelHandler" commandId="org.kalypso.model.flood.ProcessFloodModel"/>
+      <handler class="org.kalypso.model.flood.handlers.VisualizeDepthDataHandler" commandId="org.kalypso.model.flood.VisualizeDepthData"/>
+      <handler class="org.kalypso.model.flood.handlers.GenerateRiskModelHandler" commandId="org.kalypso.model.flood.GenerateRiskModel"/>
 
       <!-- Flood-Polygons -->
       <handler
