--- a/KalypsoModel1D2D/plugin.xml
+++ b/KalypsoModel1D2D/plugin.xml
@@ -25,6 +25,11 @@
       name="NodeResultDepthFunction" />
   </extension>
 
+  <extension id="org.kalypso.core.adapters" name="Kalypso Model 1D 2D Adapter Factory" point="org.eclipse.core.runtime.adapters">
+    <factory adaptableType="org.kalypsodeegree.model.feature.Feature" class="org.kalypso.kalypsomodel1d2d.schema.binding.KalypsoModel1D2DFeatureFactory">
+      <adapter type="org.kalypsodeegree.graphics.displayelements.DisplayElementDecorator" />
+    </factory>
+  </extension>
 
   <extension point="org.kalypso.core.catalogContribution">
     <catalogContribution class="org.kalypso.kalypsomodel1d2d.schema.KalypsoModel1D2DCatalogContribution"
