--- a/trunk/Kalypso1d2dProject/plugin.xml
+++ b/trunk/Kalypso1d2dProject/plugin.xml
@@ -217,7 +217,9 @@
         <image commandId="org.kalypso.model.1d2d.workflow.ResultMapGroup" icon="icons/workflow/"/>
         <image commandId="org.kalypso.model.1d2d.workflow.ConfigureResultMap" icon="icons/workflow/"/>
         <image commandId="org.kalypso.model.1d2d.workflow.ShowResultMap" icon="icons/workflow/"/>
-        <image commandId="org.kalypso.model.1d2d.workflow.ManageResultHydrograph" icon="icons/workflow/"/>
+        -->
+        <image commandId="org.kalypso.model.1d2d.workflow.ManageResultHydrograph" icon="icons/workflow/ManageResultHydrograph.gif"/>
+        <!--
         <image commandId="org.kalypso.model.1d2d.workflow.ResultLengthSectionViewGroup" icon="icons/workflow/"/>
         <image commandId="org.kalypso.model.1d2d.workflow.ConfigureResultLengthSectionView" icon="icons/workflow/"/>
         <image commandId="org.kalypso.model.1d2d.workflow.ShowResultLengthSectionView" icon="icons/workflow/"/>
