--- a/trunk/KalypsoModelWspmPdbUI/build.properties
+++ b/trunk/KalypsoModelWspmPdbUI/build.properties
@@ -6,7 +6,9 @@ bin.includes = META-INF/,\
                icons/,\
                splash.bmp,\
                OSGI-INF/l10n/bundle.properties,\
-               OSGI-INF/
+               OSGI-INF/,\
+               plugin_de.properties,\
+               plugin.properties
 source.. = src/
 src.includes = splash.bmp,\
                plugin_customization.ini,\
