--- a/KalypsoModelWspmTuhhUI/build.properties
+++ b/KalypsoModelWspmTuhhUI/build.properties
@@ -2,13 +2,10 @@ bin.includes = META-INF/,\
                plugin.xml,\
                icons/,\
                plugin.properties,\
-               plugin.properties,\
                .,\
                about.html,\
                plugin_de.properties
 jars.compile.order = .
 src.includes = icons/,\
-               about.html,\
-               plugin_de.properties,\
-               plugin.properties
+               about.html
 source.. = src/
